--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -1,15 +1,36 @@
-<!-- <p>landingpage works!</p>
+<!--  <p>landingpage works!</p>
 <button routerLink="/auth/sigup">Signup</button>
 <button routerLink="/auth/signin">Signin</button>
 <button routerLink="/home/homepage">Home</button>
 <button routerLink="/about/profile">About</button> -->
+<div>
+  <ul class="nav justify-content-center">
+    <!-- <li class="nav-item">
+      <a class="nav-link" href="auth/home">Home</a>
+    </li> -->
+    <!-- <li class="nav-item">
+      <a class="nav-link" href="">About</a>
+    </li> -->
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="/auth/sigup">Signup</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/auth/signin">Signin</a>
+    </li>
+    
+<!-- <li class="nav-item">
+      <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+    </li> -->
+</ul>
+</div>
 <div class="recipe-animation">
   <div class="bowl-container">
     <img src="../../assets/image/bowl-3d-model-free-png.webp" alt="Bowl" class="bowl">
     
-    <!-- Items appearing inside the bowl -->
-    <img src="../../assets/image/spoo.jpg" alt="Whisk" class="animated-item whisk">
+  
+      <img src="../../assets/image/spoo.jpg" alt="Whisk" class="animated-item whisk">
     <img src="../../assets/image/spoon.png" alt="Spoon" class="animated-item spoon">
     <img src="../../assets/image/whisk.jpeg" alt="Rolling Pin" class="animated-item rolling-pin">
-  </div>
-</div>
+  </div> 
+
+
