adding some new files

--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -1,13 +1,13 @@
 <!--  <p>landingpage works!</p>
 <button routerLink="/auth/sigup">Signup</button>
 <button routerLink="/auth/signin">Signin</button>
-<button routerLink="/home/homepage">Home</button>
 <button routerLink="/about/profile">About</button> -->
+<!-- <button routerLink="/home/homepage">Home</button> -->
 <div>
   <ul class="nav justify-content-center">
-    <!-- <li class="nav-item">
-      <a class="nav-link" href="auth/home">Home</a>
-    </li> -->
+    <li class="nav-item">
+      <a class="nav-link" href="/home/homepage">Home</a>
+    </li>
     <!-- <li class="nav-item">
       <a class="nav-link" href="">About</a>
     </li> -->
@@ -17,10 +17,6 @@
     <li class="nav-item">
       <a class="nav-link" href="/auth/signin">Signin</a>
     </li>
-    
-<!-- <li class="nav-item">
-      <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-    </li> -->
 </ul>
 </div>
 <div class="recipe-animation">
