--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -8,9 +8,9 @@
     <li class="nav-item">
       <a class="nav-link" href="/home/homepage">Home</a>
     </li>
-    <!-- <li class="nav-item">
-      <a class="nav-link" href="">About</a>
-    </li> -->
+    <li class="nav-item">
+      <a class="nav-link" href="/auth/recipe">5Mins Recipe</a>
+    </li>
     <li class="nav-item">
       <a class="nav-link active" aria-current="page" href="/auth/sigup">Signup</a>
     </li>
