--- a/src/app/indian/items/items.component.html
+++ b/src/app/indian/items/items.component.html
@@ -1,1 +1,98 @@
-<p>Indian!</p>
+
+<div class="body">
+    <h1>Indian Cuisines</h1>
+<div class="gallery">
+    <div class="image-frame">
+        <a href="/indian/amritsari">
+        <img src="../../../assets/image/amritsari chicken curry.jpg" alt="Amritsari Chicken Curry">
+        <div class="image-caption">Amritsari Chicken Curry</div>
+        </a>
+    </div>
+    <div class="image-frame">
+        <a href="/indian/andhra">
+        <img src="../../../assets/image/andra crab meat masala.jpg" alt="Andhra Crab Meat Masala">
+        <div class="image-caption">Andhra Crab Meat Masala</div>
+    </a>
+    </div>
+    <div class="image-frame">
+        <a href="">
+        <img src="../../../assets/image/chana palak.jpg" alt="Chana Palak">
+        <div class="image-caption">Chana Palak</div>
+        </a>
+    </div>
+    <div class="image-frame">
+        <a href="">
+        <img src="../../../assets/image/galauti kebab.jpg" alt="Galauti Kebab">
+        <div class="image-caption">Galauti Kebab</div>
+    </a>
+    </div>
+    <div class="image-frame">
+        <a href="">
+        <img src="../../../assets/image/hydrabad briyani.jpg" alt="Hyderabadi Biryani">
+        <div class="image-caption">Hyderabadi Biryani</div>
+    </a>
+    </div>
+    <div class="image-frame">
+        <a href="">
+        <img src="../../../assets/image/jackfruit briyani.jpg" alt="Jackfruit Biryani">
+        <div class="image-caption">Jackfruit Biryani</div>
+        </a>
+    </div>
+    <div class="image-frame">
+        <a href="">
+        <img src="../../../assets/image/kolapuri chicken.jpg" alt="Kolhapuri Chicken">
+        <div class="image-caption">Kolhapuri Chicken</div>
+    </a>
+    </div>
+    <div class="image-frame">
+        <a href="">
+        <img src="../../../assets/image/koliwada prawns.jpg" alt="Koliwada Prawns">
+        <div class="image-caption">Koliwada Prawns</div>
+    </a>
+    </div>
+    <div class="image-frame">
+        <a href="">
+        <img src="../../../assets/image/malai ghevar.jpg" alt="Malai Ghevar">
+        <div class="image-caption">Malai Ghevar</div>
+    </a>
+    </div>
+    <div class="image-frame">
+        <a href="">
+        <img src="../../../assets/image/modak.jpg" alt="Modak">
+        <div class="image-caption">Modak</div>
+    </a>
+    </div>
+    <div class="image-frame">
+        <a href="">
+        <img src="../../../assets/image/rajasthani laal mass.jpg" alt="Rajasthani Laal Maas">
+        <div class="image-caption">Rajasthani Laal Maas</div>
+    </a>
+    </div>
+    <div class="image-frame">
+        <a href="">
+        <img src="../../../assets/image/seviyan kheer.jpg" alt="Seviyan Kheer">
+        <div class="image-caption">Seviyan Kheer</div>
+        </a>
+    </div>
+    <div class="image-frame">
+        <a href="">
+        <img src="../../../assets/image/shahi tukda.jpg" alt="Shahi Tukda">
+        <div class="image-caption">Shahi Tukda</div>
+    </a>
+    </div>
+    <div class="image-frame">
+        <a href="">
+        <img src="../../../assets/image/surmai fish briyani.jpg" alt="Surmai Fish Biryani">
+        <div class="image-caption">Surmai Fish Biryani</div>
+        </a>
+    </div>
+    <div class="image-frame">
+        <a href="">
+        <img src="../../../assets/image/mutton kofta.jpg" alt="Mutton Kofta">
+        <div class="image-caption">Mutton Kofta</div>
+    </a>
+    </div>
+</div>
+</div>
+
+
