--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -1,32 +1,36 @@
-<!--  <p>landingpage works!</p>
-<button routerLink="/auth/sigup">Signup</button>
-<button routerLink="/auth/signin">Signin</button>
-<button routerLink="/about/profile">About</button> -->
-<!-- <button routerLink="/home/homepage">Home</button> -->
-<div>
-  <ul class="nav justify-content-center">
-    <li class="nav-item">
-      <a class="nav-link" href="/home/homepage">Home</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/auth/recipe">5Mins Recipe</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link active" aria-current="page" href="/auth/sigup">Signup</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/auth/signin">Signin</a>
-    </li>
-</ul>
-</div>
-<div class="recipe-animation">
-  <div class="bowl-container">
-    <img src="../../assets/image/bowl-3d-model-free-png.webp" alt="Bowl" class="bowl">
-    
-  
-      <img src="../../assets/image/spoo.jpg" alt="Whisk" class="animated-item whisk">
-    <img src="../../assets/image/spoon.png" alt="Spoon" class="animated-item spoon">
-    <img src="../../assets/image/whisk.jpeg" alt="Rolling Pin" class="animated-item rolling-pin">
-  </div> 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<body>
+    <header>
+        
+            <nav>
+                <div class="logo">
+                    <i class="fa-solid fa-utensils"></i> Damn Delicious
+                </div>
+                <ul class="nav-menu" id="nav-menu">
+                    <li><a href ="/home/homepage"> HOME </a></li>
+                    <li><a href ="/about/profile"> ABOUT </a></li>
+                    <li><a href ="/auth/recipe"> 5 MIN RECIPE </a></li>
+                    <li><a href ="#"> CONTACT </a></li>
+                </ul>
 
+                <div class="menu-toggle" id="menu-toggle">
+                    <i class="fa-solid fa-bars"></i> </div>
+            </nav>
+        
+    </header>
+    <section class="hero">
+        <div class="hero-content">
+            <h1>
+                Enjoy Your<br>Delicioius Meals
+            </h1>
+            <p>
+                Cook delicious meals with easy, step-by-step recipes that make cooking stress-free and fun, using everyday ingredients to save time, even on busy days,<br>
+                Find a variety of quick and tasty recipes that fit any occasion, from family dinners to casual snacks.   
+            </p>
+        </div>
+        <div class="food-image">
+            <img src="../../assets/image/food-plate.png">
 
+        </div>
+    </section>
+  </body>
